--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  margin: 0;
+}
+
+.App {
+  padding: 30px;
+  background-color: #282c34;
+  min-height: 100vh;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.icon {
+  display: inline-block;
+  width: 30px;
+  text-align: center;
 }
